fix: fixed alias path for store folder

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -14,9 +14,9 @@
           "hooks/*",
           "hooks"
         ],
-        "@states/*": [
-          "states/*",
-          "states"
+        "@store/*": [
+          "store/*",
+          "store"
         ],
         "@ui/*": [
           "ui/*",
